# Neural-Tactics

./: Makefile  README.md  _CoqProject  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  rocq-owl-tactics.dune-package  rocq-owl-tactics.install
_build/default/src/: owl_bridge.ml  rocq_owl_tactics_plugin.cmxa  rocq_owl_tactics_plugin.cmxs  rocq_owl_tactics_plugin.ml-gen
_build/default/src/.merlin-conf/: lib-rocq-owl-tactics.plugin
_build/default/src/.rocq_owl_tactics_plugin.objs/: rocq_owl_tactics_plugin__G_owl_tactics.impl.all-deps  rocq_owl_tactics_plugin__G_owl_tactics.impl.d  rocq_owl_tactics_plugin__Owl_bridge.impl.d  rocq_owl_tactics_plugin__Owl_tactic_core.impl.all-deps  rocq_owl_tactics_plugin__Owl_tactic_core.impl.d
_build/default/src/.rocq_owl_tactics_plugin.objs/byte/: rocq_owl_tactics_plugin.cmi  rocq_owl_tactics_plugin.cmo  rocq_owl_tactics_plugin.cmt  rocq_owl_tactics_plugin__G_owl_tactics.cmi  rocq_owl_tactics_plugin__G_owl_tactics.cmo  (+7 more)
_install/lib/rocq-owl-tactics/: META  dune-package  opam
_install/lib/rocq-owl-tactics/plugin/: owl_bridge.ml  owl_tactic_core.ml  rocq_owl_tactics_plugin.cmxs  rocq_owl_tactics_plugin__G_owl_tactics.cmt  rocq_owl_tactics_plugin__Owl_bridge.cmt  rocq_owl_tactics_plugin__Owl_bridge.cmx  rocq_owl_tactics_plugin__Owl_tactic_core.cmi  rocq_owl_tactics_plugin__Owl_tactic_core.cmt  rocq_owl_tactics_plugin__Owl_tactic_core.cmx
examples/: .demo.aux  demo.glob  demo.v  demo.vo
src/: dune  g_owl_tactics.ml
theories/: .OwlTactics.aux  OwlTactics.glob  OwlTactics.v  OwlTactics.vo
(+25 files in other folders)
